added support for question input via form

--- a/printer.html
+++ b/printer.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Quiz Board Card Printer</title>
+    <title>Card Printer | Quiz Board</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
